fixing spacing for extra images gallery

--- a/styles/pages/DetailsMobile.module.scss
+++ b/styles/pages/DetailsMobile.module.scss
@@ -34,15 +34,15 @@
     .full_gallery_container {
         display: flex;
         flex-direction: row;
-        padding: 0px;
-        margin: 5px;
+        padding: 5px;
+        margin: 0px;
         overflow-x: auto;
         overflow-y: hidden;
-        height: 130px;
+        height: 140px;
         background-color: $secondary;
 
         .extra_images_gallery_container {
-            height: 120px;
+            height: 110px;
             display: flex;
             flex-direction: row;
             flex-wrap: nowrap;
